kqed/src/objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Link__c</fullName>
        <formula>HYPERLINK(  Contact__r.Id , 
 Contact__r.FirstName 
&amp;
&quot; &quot;
&amp;
Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Planned_Giving_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Giving__c</fullName>
        <label>Planned Giving</label>
        <referenceTo>Bequest__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Planned_Giving_Contact_Roles1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <formula>Contact__r.Preferred_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bene A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bene I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoTrustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor Bene A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donor Bene I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>PGCR-{0000}</displayFormat>
        <label>PGCR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>